# CMakeList.txt : CMake project for Deque with move, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)
enable_testing()
# Add source to this project's executable.
add_executable (CMakeTarget "Deque with move.cpp"  "Deque.cpp")
# TODO: Add tests and install targets if needed.

